# Actix-SolidJS-Web-Performance

./: README.md
client/: package-lock.json  package.json
client/src/: index.tsx
client/src/components/: App.tsx
client/src/components/base/: Navigation.tsx  Table.tsx
client/src/pages/: Create.tsx  Index.tsx  Main.tsx  PageNotFound.tsx  Update.tsx  index.ts
client/src/services/: config.ts  userService.ts
client/src/store/: store.ts
client/src/tests/: App.test.tsx
client/src/utilities/: attempt.ts
server/: Cargo.toml  generate_data.bash
server/fixtures/: rest_api.sql
server/migrations/2022-06-01-145225_create_user/: up.sql
server/src/: .env  db.rs  main.rs  schema.rs
server/src/conversations/: model.rs
server/src/lib/: generate_users.rs
server/src/user/: mod.rs  model.rs  routes.rs
