[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-rt = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "^0.8", features = ["serde", "v4"] }
listenfd = "0.3"
lazy_static = "1.4"
r2d2 = "0.8"